# s3g-max

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
package/: package-info.json
package/docs/: s3g-max.md  s3g.layoutpan-mc.md  s3g.layoutpan-rnbo-notes.md  testing.md
package/help/: s3g.ambidecoder~.maxhelp  s3g.ambigrain~.maxhelp  s3g.ambisubdecoder~.maxhelp  s3g.arraydelay~.maxhelp  s3g.arrayhpf~.maxhelp  s3g.arraytrim~.maxhelp  s3g.dbappan~.maxhelp  s3g.layoutpan~.maxhelp  s3g.lbappan~.maxhelp  s3g.subxover~.maxhelp  s3g.vbappan~.maxhelp
package/javascript/: s3g_ambidecoder_v8ui.js  s3g_ambisubdecoder_v8ui.js  s3g_arrayhpf_v8ui.js  s3g_layoutpan_v8ui.js  s3g_subxover_v8ui.js
package/patchers/: s3g.layoutpan-smoke.maxtest.maxpat
scripts/: build-release.sh  install-local-package.sh
source/min-api/include/: c74_min.h  c74_min_atom.h
source/min-api/script/: min-pretarget.cmake
